tests/snapshots/parser_error_fixtures/exposing_empty_dotdot_extra.snap
---
source: tests/error_fixtures/parser_error_fixtures_snapshots.rs
---
Fixture: examples/parser_errors/exposing_empty_dotdot_extra.flx
== compile ==
failed (parse)
== diagnostics ==
error[E034]: Missing Closing Paren

Expected `)` after `..` in exposing clause.

  examples/parser_errors/exposing_empty_dotdot_extra.flx:1:24
  |
1 | import Foo exposing (.., bar)
  |                        ^

Hint:
  Wildcard exposing uses `exposing (..)`.
== stdout ==
<not executed>
